--- a/views/includes/headerPaciente.pug
+++ b/views/includes/headerPaciente.pug
@@ -1,4 +1,4 @@
-header
+header(class="headerPaciente")
       a(href="http://localhost:3000/pacientes/paciente", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
