--- a/views/paciente/pacienteTurnoSuccess.pug
+++ b/views/paciente/pacienteTurnoSuccess.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Vista Paciente
+    link(rel="stylesheet" href="/css/headerPaciente.css")
     link(rel="stylesheet" href="/css/paciente.css")
     link(rel="stylesheet" href="/css/footer.css")
   body
