--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -3,68 +3,67 @@ html
   head
     title Crear Agenda
     link(rel="stylesheet" href="/css/secretariaCrearAgenda.css")
-    link(rel="stylesheet" href="/css/secretaria.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="/css/footer.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
     include ../includes/headerSecretaria
+    main(class="mainCrearAgenda")
+      h1 Crear Agenda para Profesional
 
-    h1 Crear Agenda para Profesional
+      form(action="/agendas/crear" method="POST" class="form-agenda")
+        
+        label(for="profesional") Seleccionar Profesional:
+        select(name="profesional_especialidad_id" id="profesional" required)
+          option(value="" disabled selected) Selecciona un profesional
+          each profesional in profesionales
+            option(value=profesional.id)= `${profesional.nombre_completo} / ${profesional.especialidad}`
 
-    form(action="/agendas/crear" method="POST" class="form-agenda")
-      
-      label(for="profesional") Seleccionar Profesional:
-      select(name="profesional_especialidad_id" id="profesional" required)
-        option(value="" disabled selected) Selecciona un profesional
-        each profesional in profesionales
-          option(value=profesional.id)= `${profesional.nombre_completo} / ${profesional.especialidad}`
+        
+        label(for="sucursal") Seleccionar Sucursal:
+        select(name="sucursal_id" id="sucursal" required)
+          option(value="" disabled selected) Selecciona una sucursal
+          each sucursal in sucursales
+            option(value=sucursal.id)= sucursal.nombre
 
-      
-      label(for="sucursal") Seleccionar Sucursal:
-      select(name="sucursal_id" id="sucursal" required)
-        option(value="" disabled selected) Selecciona una sucursal
-        each sucursal in sucursales
-          option(value=sucursal.id)= sucursal.nombre
+        
+        label(for="dia_inicio") Fecha de inicio:
+        input(type="date" name="dia_inicio" required)
 
-      
-      label(for="dia_inicio") Fecha de inicio:
-      input(type="date" name="dia_inicio" required)
+        label(for="dia_fin") Fecha de fin:
+        input(type="date" name="dia_fin" required)
 
-      label(for="dia_fin") Fecha de fin:
-      input(type="date" name="dia_fin" required)
+        label(for="tiempo_consulta") Duración de cada consulta:
+        input(type="time" id="tiempo_consulta" name="tiempo_consulta" value="00:30:00" required)
 
-      label(for="tiempo_consulta") Duración de cada consulta:
-      input(type="time" id="tiempo_consulta" name="tiempo_consulta" value="00:30:00" required)
+        h2 Días de atención
 
-      h2 Días de atención
-
-      
-      table
-        thead
-          tr
-            th Día
-            th ¿Activo?
-            th Turno Mañana
-            th Turno Tarde
-        tbody
-          each dia in ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado', 'Domingo']
+        
+        table
+          thead
             tr
-              td= dia
-              td
-                input(type="checkbox" name=`dias[${dia}][activo]`)
-              td
-                label De:
-                input(type="time" name=`dias[${dia}][manana_inicio]`)
-                label a
-                input(type="time" name=`dias[${dia}][manana_fin]`)
-              td
-                label De:
-                input(type="time" name=`dias[${dia}][tarde_inicio]`)
-                label a
-                input(type="time" name=`dias[${dia}][tarde_fin]`)
+              th Día
+              th ¿Activo?
+              th Turno Mañana
+              th Turno Tarde
+          tbody
+            each dia in ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado', 'Domingo']
+              tr
+                td= dia
+                td
+                  input(type="checkbox" name=`dias[${dia}][activo]`)
+                td
+                  label De:
+                  input(type="time" name=`dias[${dia}][manana_inicio]`)
+                  label a
+                  input(type="time" name=`dias[${dia}][manana_fin]`)
+                td
+                  label De:
+                  input(type="time" name=`dias[${dia}][tarde_inicio]`)
+                  label a
+                  input(type="time" name=`dias[${dia}][tarde_fin]`)
 
-      button(type="submit") Crear Agenda
+        button(type="submit") Crear Agenda
     include ../includes/footer
     script(src="/js/logout.js")
     script(src="https://cdn.jsdelivr.net/npm/flatpickr")
