--- a/views/admin/adminSecretariaSuccess.pug
+++ b/views/admin/adminSecretariaSuccess.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         title Cargar Médico
+        link(rel="stylesheet", href="/css/headerAdmin.css")
         link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
