--- a/views/secretaria/secretariaCrearAusencia.pug
+++ b/views/secretaria/secretariaCrearAusencia.pug
@@ -9,79 +9,79 @@ html
         link(rel='stylesheet', href='https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css')
     body
         include ../includes/headerSecretaria
+        main(class="mainCrearAusencia")
+            h2 Registrar Ausencia de Profesional
 
-        h2 Registrar Ausencia de Profesional
+            form(method="POST" action="/agendas/ausencias/registrar")
+                div
+                    label(for="profesional_especialidad_id") Profesional:
+                    select(name="profesional_especialidad_id" id="profesional_especialidad_id" required)
+                        option(value="" disabled selected) Selecciona un profesional
+                        each profesional in profesionales
+                            option(value=profesional.id) #{profesional.nombre_completo} - #{profesional.especialidad}
 
-        form(method="POST" action="/agendas/ausencias/registrar")
-            div
-                label(for="profesional_especialidad_id") Profesional:
-                select(name="profesional_especialidad_id" id="profesional_especialidad_id" required)
-                    option(value="" disabled selected) Selecciona un profesional
-                    each profesional in profesionales
-                        option(value=profesional.id) #{profesional.nombre_completo} - #{profesional.especialidad}
+                div
+                    label(for="fecha_inicio") Fecha inicio:
+                    input(type="text" name="fecha_inicio" id="fecha_inicio", required)
 
-            div
-                label(for="fecha_inicio") Fecha inicio:
-                input(type="text" name="fecha_inicio" id="fecha_inicio", required)
+                div
+                    label(for="fecha_fin") Fecha fin:
+                    input(type="text" name="fecha_fin" id="fecha_fin", required)
 
-            div
-                label(for="fecha_fin") Fecha fin:
-                input(type="text" name="fecha_fin" id="fecha_fin", required)
+                div
+                    label(for="hora_inicio") Hora inicio (opcional):
+                    select(name="hora_inicio" id="hora_inicio")
+                        option(value="") -- Seleccione --
 
-            div
-                label(for="hora_inicio") Hora inicio (opcional):
-                select(name="hora_inicio" id="hora_inicio")
-                    option(value="") -- Seleccione --
+                div
+                    label(for="hora_fin") Hora fin (opcional):
+                    select(name="hora_fin" id="hora_fin")
+                        option(value="") -- Seleccione --
 
-            div
-                label(for="hora_fin") Hora fin (opcional):
-                select(name="hora_fin" id="hora_fin")
-                    option(value="") -- Seleccione --
+                div
+                    label(for="tipo") Tipo de ausencia:
+                    select(name="tipo")
+                        option(value="Vacaciones") Vacaciones
+                        option(value="Licencia") Licencia
+                        option(value="Otro") Otro
 
-            div
-                label(for="tipo") Tipo de ausencia:
-                select(name="tipo")
-                    option(value="Vacaciones") Vacaciones
-                    option(value="Licencia") Licencia
-                    option(value="Otro") Otro
+                div
+                    label(for="descripcion") Descripción:
+                    textarea(name="descripcion")
 
-            div
-                label(for="descripcion") Descripción:
-                textarea(name="descripcion")
+                button(type="submit") Registrar Ausencia
 
-            button(type="submit") Registrar Ausencia
+            h3 Ausencias cargadas:
+            table#tablaAusencias
+                thead
+                    tr
+                        th Profesional
+                        th Especialidad
+                        th Desde
+                        th Hasta
+                        th Horario
+                        th Tipo
+                        th
+                tbody
+                    each a in ausencias
+                        tr
+                            td #{a.nombre_completo}
+                            td #{a.especialidad}
+                            td #{new Date(a.fecha_inicio).toLocaleDateString('es-AR')}
+                            td #{new Date(a.fecha_fin).toLocaleDateString('es-AR')}
+                            td 
+                                if !a.hora_inicio && !a.hora_fin
+                                    | Todo el día
+                                else
+                                    | #{a.hora_inicio} - #{a.hora_fin}
+                            td #{a.tipo}
+                            td
+                                button.btn-eliminar(type="button" data-id=a.id) Eliminar
 
-    h3 Ausencias cargadas:
-    table#tablaAusencias
-        thead
-            tr
-                th Profesional
-                th Especialidad
-                th Desde
-                th Hasta
-                th Horario
-                th Tipo
-                th
-        tbody
-            each a in ausencias
-                tr
-                    td #{a.nombre_completo}
-                    td #{a.especialidad}
-                    td #{new Date(a.fecha_inicio).toLocaleDateString('es-AR')}
-                    td #{new Date(a.fecha_fin).toLocaleDateString('es-AR')}
-                    td 
-                        if !a.hora_inicio && !a.hora_fin
-                            | Todo el día
-                        else
-                            | #{a.hora_inicio} - #{a.hora_fin}
-                    td #{a.tipo}
-                    td
-                        button.btn-eliminar(type="button" data-id=a.id) Eliminar
-
-script(src="/js/ausencias.js")
-script(src="https://cdn.jsdelivr.net/npm/flatpickr")
-script(src="https://code.jquery.com/jquery-3.7.1.min.js")
-script(src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js")
-script(src="/js/tablafecha.js")
-script(src="/js/logout.js")
-include ../includes/footer
+        script(src="/js/ausencias.js")
+        script(src="https://cdn.jsdelivr.net/npm/flatpickr")
+        script(src="https://code.jquery.com/jquery-3.7.1.min.js")
+        script(src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js")
+        script(src="/js/tablafecha.js")
+        script(src="/js/logout.js")
+        include ../includes/footer
